# molecode_utils

./: .gitignore  AGENTS.md  INSTALL.md  README.md  app.py  pyproject.toml
assets/: hover.css  style.css
data/: molecode-data-v0.1.0.h5
documentation/: README.md  constants.md  dataset.md  figures.md  filter.md  model.md  molecule.md  reaction.md  var_metadata.md
examples/: README.md  dash_slider_demo.py  dataset_tutorial.py  dataset_walkthrough.py  figures_tutorial.py  filter_tutorial.py  groupby_performance.py  histogram_tutorial.py  model_tutorial.py  model_walkthrough.py  molecule_figures.py  molecule_tutorial.py  molecule_walkthrough.py  prediction_performance.py  reaction_tutorial.py  reaction_walkthrough.py  sequential_analysis.py  three_d_figures.py
src/molecode_utils/: README.md  __init__.py  constants.py  dash_utils.py  dataset.py  figures.py  filter.py  model.py  molecule.py  reaction.py  var_metadata.py
tests/: RUNTESTS.md  test_dataset.py  test_figures_labels.py  test_filter.py  test_model.py  test_molecule.py  test_reaction.py
