[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "molecode_utils"
version = "0.1.0"
description = "Utilities for the MoleCode dataset"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "h5py",
    "numpy",
    "pandas",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
